feat(rma-frontend): Set due date based on credit days of selected customer

--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -82,6 +82,7 @@
                       autoActiveFirstOption
                       #auto="matAutocomplete"
                       [displayWith]="getOptionText"
+                      (optionSelected)="customerChanged($event.option.value)"
                     >
                       <mat-option
                         *ngFor="let option of filteredCustomerList | async"
