--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/sales-return/sales-return.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/sales-return/sales-return.component.html
@@ -1,11 +1,25 @@
 <ion-card>
   <ion-card-content class="table-container ion-no-padding">
+    <ion-fab vertical="top" horizontal="end" slot="fixed">
+      <ion-fab-button [routerLink]="['/add-sales-return', invoiceUuid]">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+
     <div class="loading-shade" *ngIf="dataSource.loading$ | async">
-      <mat-progress-bar *ngIf="dataSource.loading$ | async" mode="indeterminate"></mat-progress-bar>
+      <mat-progress-bar
+        *ngIf="dataSource.loading$ | async"
+        mode="indeterminate"
+      ></mat-progress-bar>
     </div>
 
-    <table mat-table class="full-width-table" [dataSource]="dataSource" matSort style="width: 100%;">
-
+    <table
+      mat-table
+      class="full-width-table"
+      [dataSource]="dataSource"
+      matSort
+      style="width: 100%;"
+    >
       <!-- DN Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>DN name</th>
@@ -33,11 +47,20 @@
       <!-- Status Column -->
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td 
-        mat-cell
-        *matCellDef="let row"
-        [ngStyle]="{'color':row.status === 'Completed' ? 'green'  : row.status === 'To Bill' ? 'orange' :'red' }"
-        >{{ row.status }}</td>
+        <td
+          mat-cell
+          *matCellDef="let row"
+          [ngStyle]="{
+            color:
+              row.status === 'Completed'
+                ? 'green'
+                : row.status === 'To Bill'
+                ? 'orange'
+                : 'red'
+          }"
+        >
+          {{ row.status }}
+        </td>
       </ng-container>
 
       <!-- Created By Column -->
@@ -57,8 +80,14 @@
     </table>
 
     <mat-card-actions>
-      <mat-paginator #paginator class="mat-paginator-sticky" (page)="getUpdate($event)"
-        [pageIndex]="paginator.pageIndex" [length]="dataSource.length" [pageSizeOptions]="[10, 50, 100, 500]">
+      <mat-paginator
+        #paginator
+        class="mat-paginator-sticky"
+        (page)="getUpdate($event)"
+        [pageIndex]="paginator.pageIndex"
+        [length]="dataSource.length"
+        [pageSizeOptions]="[10, 50, 100, 500]"
+      >
       </mat-paginator>
     </mat-card-actions>
   </ion-card-content>
