fix(rma-frontend): Fixed completed status on SI listing

--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -84,7 +84,7 @@
                     [ngStyle]="{
                     color: 'green'
                   }"
-                    *ngIf="row.status === 'To Deliver' || row.status === 'Submitted' "
+                    *ngIf="row.status === 'To Deliver' || row.status === 'Completed' "
                   >
                     {{row.status}}
                   </ion-text>
