--- a/packages/rma-frontend/src/app/warranty-ui/warranty-tabs/warranty-tabs.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/warranty-tabs/warranty-tabs.page.html
@@ -12,11 +12,7 @@
 <ion-content class="page-background">
   <ion-card>
     <ion-card-header class="ion-no-padding">
-      <ion-segment
-        [(ngModel)]="selectedSegment"
-        scrollable="true"
-        (ionChange)="segmentChanged($event)"
-      >
+      <ion-segment [(ngModel)]="selectedSegment" scrollable="true">
         <ion-segment-button value="0">
           <ion-label>Serial No</ion-label>
         </ion-segment-button>
@@ -29,25 +25,9 @@
       </ion-segment>
     </ion-card-header>
   </ion-card>
-
-  <ion-slides
-    #slides
-    mode="md"
-    pager="false"
-    [options]="sliderOptions"
-    (ionSlideDidChange)="slideChanged(slides)"
-    (ionSlidesDidLoad)="slideChanged(slides)"
-  >
-    <ion-slide>
-      <warranty-serial-number class="width"> </warranty-serial-number>
-    </ion-slide>
-    <ion-slide>
-      <warranty-assign-claims class="width"> </warranty-assign-claims>
-    </ion-slide>
-    <ion-slide>
-      <warranty-claims class="width"></warranty-claims>
-    </ion-slide>
-  </ion-slides>
-
-  <!-- <div [ngSwitch]="selectedSegment"></div> -->
+  <div [ngSwitch]="selectedSegment">
+    <warranty-serial-number *ngSwitchCase="0"> </warranty-serial-number>
+    <warranty-assign-claims *ngSwitchCase="1"> </warranty-assign-claims>
+    <warranty-claims *ngSwitchCase="2"></warranty-claims>
+  </div>
 </ion-content>
