--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -125,10 +125,23 @@
                 </td>
               </ng-container>
 
+              <ng-container matColumnDef="created_by">
+                <th mat-header-cell *matHeaderCellDef>
+                  Created By
+                </th>
+                <td mat-cell *matCellDef="let row"></td>
+              </ng-container>
+
+              <ng-container matColumnDef="delivered_by">
+                <th mat-header-cell *matHeaderCellDef>
+                  Delivered By
+                </th>
+                <td mat-cell *matCellDef="let row"></td>
+              </ng-container>
               <!-- posting_date Column -->
               <ng-container matColumnDef="posting_date">
                 <th mat-header-cell *matHeaderCellDef>
-                  Posting Date
+                  Date
                 </th>
                 <td mat-cell *matCellDef="let row">
                   {{row.posting_date}}
@@ -146,14 +159,14 @@
               </ng-container>
 
               <!-- total_qty Column -->
-              <ng-container matColumnDef="total_qty">
+              <!-- <ng-container matColumnDef="total_qty">
                 <th mat-header-cell *matHeaderCellDef>
                   Quantity
                 </th>
                 <td mat-cell *matCellDef="let row">
                   {{row.total_qty}}
                 </td>
-              </ng-container>
+              </ng-container> -->
 
               <!-- Status Column -->
               <ng-container matColumnDef="status">
@@ -185,7 +198,7 @@
                   mat-sort-header
                   (click)="setFilter()"
                 >
-                  Total
+                  Invoice Amount
                 </th>
                 <td mat-cell *matCellDef="let row">
                   {{row.total | curFormat | async }}
