--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/credit-notes/credit-notes.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/credit-notes/credit-notes.component.html
@@ -1,11 +1,19 @@
 <ion-card>
   <ion-card-content class="table-container ion-no-padding">
     <div class="loading-shade" *ngIf="dataSource.loading$ | async">
-      <mat-progress-bar *ngIf="dataSource.loading$ | async" mode="indeterminate"></mat-progress-bar>
+      <mat-progress-bar
+        *ngIf="dataSource.loading$ | async"
+        mode="indeterminate"
+      ></mat-progress-bar>
     </div>
 
-    <table mat-table class="full-width-table" [dataSource]="dataSource" matSort style="width: 100%;">
-
+    <table
+      mat-table
+      class="full-width-table"
+      [dataSource]="dataSource"
+      matSort
+      style="width: 100%;"
+    >
       <!-- CN Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>CN name</th>
@@ -17,7 +25,7 @@
         <th mat-header-cell *matHeaderCellDef>Posting Date</th>
         <td mat-cell *matCellDef="let row">{{ row.posting_date }}</td>
       </ng-container>
-      
+
       <!-- Total Column -->
       <ng-container matColumnDef="total">
         <th mat-header-cell *matHeaderCellDef>Amount</th>
@@ -27,10 +35,7 @@
       <!-- Customer Name Column -->
       <ng-container matColumnDef="customer_name">
         <th mat-header-cell *matHeaderCellDef>Customer Name</th>
-        <td 
-        mat-cell
-        *matCellDef="let row"
-        >{{ row.customer_name }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.customer_name }}</td>
       </ng-container>
 
       <!-- Created By Column -->
@@ -48,36 +53,24 @@
       <!-- Company Name Column -->
       <ng-container matColumnDef="company">
         <th mat-header-cell *matHeaderCellDef>Company Name</th>
-        <td 
-        mat-cell
-        *matCellDef="let row"
-        >{{ row.company }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.company }}</td>
       </ng-container>
 
       <!-- Return Against Name Column -->
       <ng-container matColumnDef="return_against">
         <th mat-header-cell *matHeaderCellDef>Against SN</th>
-        <td 
-        mat-cell
-        *matCellDef="let row"
-        >{{ row.return_against }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.return_against }}</td>
       </ng-container>
 
       <!-- Customer Name Column -->
       <ng-container matColumnDef="due_date">
         <th mat-header-cell *matHeaderCellDef>Due Date</th>
-        <td 
-        mat-cell
-        *matCellDef="let row"
-        >{{ row.due_date }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.due_date }}</td>
       </ng-container>
 
       <ng-container matColumnDef="contact_email">
         <th mat-header-cell *matHeaderCellDef>Constact Email</th>
-        <td 
-        mat-cell
-        *matCellDef="let row"
-        >{{ row.contact_email }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.contact_email }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
@@ -85,8 +78,13 @@
     </table>
 
     <mat-card-actions>
-      <mat-paginator #paginator class="mat-paginator-sticky" (page)="getUpdate($event)"
-        [pageIndex]="paginator.pageIndex" [length]="dataSource.length" [pageSizeOptions]="[10, 50, 100, 500]">
+      <mat-paginator
+        #paginator
+        class="mat-paginator-sticky"
+        (page)="getUpdate($event)"
+        [length]="dataSource.length"
+        [pageSizeOptions]="[10, 50, 100, 500]"
+      >
       </mat-paginator>
     </mat-card-actions>
   </ion-card-content>
